<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ImageView
        android:id="@+id/ivBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.2"
        android:contentDescription="@string/background_picture"
        android:src="@drawable/background"
        android:scaleType="centerCrop"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_message"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:paddingStart="16dp"
        android:paddingEnd="10dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilReceiver"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/receiver_e_g_user_2"
        app:startIconDrawable="@android:drawable/ic_menu_myplaces"
        app:layout_constraintTop_toBottomOf="@id/tvHeader">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etReceiverId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilMessage"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/your_message"
        app:counterEnabled="true"
        app:counterMaxLength="100"
        app:layout_constraintTop_toBottomOf="@id/tilReceiver">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:inputType="textMultiLine"
            android:lines="3" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_to_firebase"
        android:layout_marginTop="24dp"
        android:padding="10dp"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/tilMessage"
        />


    <TextView
            android:id="@+id/locationText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/location_show"
            android:textSize="18sp"
            android:textAlignment="center"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@id/btnSend"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

    />

    <Button
            android:id="@+id/getLocationBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_location"
        app:layout_constraintTop_toBottomOf="@id/locationText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/btnGoToMusic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/music_player"
        app:layout_constraintTop_toBottomOf="@id/getLocationBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>
    <Button
        android:id="@+id/btnContentProvider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/image_provider"
        app:layout_constraintTop_toBottomOf="@+id/btnGoToMusic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <Button
        android:id="@+id/btnRoomDatabase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Task Database"
        app:layout_constraintTop_toBottomOf="@+id/btnContentProvider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>